# your-docs-mcp

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Claude.md  MCP_MODELSERVICE_ERROR_INVESTIGATION.md  MCP_TESTING_SUMMARY.md  README.md  README.md.backup  coverage.json  pyproject.toml  pytest.ini
.claude/: DOCUMENTATION_STANDARDS.md  settings.json
.claude/agents/: doc-creator.md  doc-editor.md  doc-validator.md
.claude/hooks/: post-edit-lint.sh  session-context.sh
.claude/rules/: security.md  services.md  testing.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/validate-docs/: README.md  action.yml
.github/workflows/: ci.yml  coverage.yml  pr-validation.yml  pypi-publish.yml  release.yml  testpypi-publish.yml
.specify/memory/: constitution.md
docs/: ci-cd-integration.md
docs-plugin/: README.md
docs-plugin/.claude-plugin/: plugin.json
docs-plugin/skills/doc-create/: SKILL.md
docs-plugin/skills/doc-frontmatter/: SKILL.md
docs-plugin/skills/doc-lint/: SKILL.md
docs-plugin/skills/doc-preview/: SKILL.md
docs/api/: openapi.yaml  rest.md
docs/architecture/: mcp-protocol.md  overview.md  vector-db.md
docs/config-examples/: .mcp-docs.yaml  claude-desktop.json  vscode-mcp.json
docs/development/: contributing.md  testing.md
docs/guides/: getting-started.md
docs/reference/: cli-commands.md
docs_mcp/: __init__.py  __main__.py  config.py  server.py  web.py
docs_mcp/core/: __init__.py  config.py
docs_mcp/handlers/: tools.py
docs_mcp/mcp/: __init__.py  server.py
docs_mcp/pdf/: __init__.py  generator.py
docs_mcp/security/: auth.py
docs_mcp/services/: search.py  vector.py
docs_mcp/static/: app.js  index.html
docs_mcp/vector/: __init__.py  search.py
docs_mcp/web/: __init__.py  app.py  markdown_renderer.py  partials.py  routes.py  theme.py
example/: README.md
example/api/: authentication.md  endpoints.md  openapi.yaml
example/guides/: configuration.md
example/reference/: cli-commands.md
hierarchical_docs_mcp/: __main__.py  config.py  server.py  web.py
hierarchical_docs_mcp/handlers/: resources.py  tools.py
hierarchical_docs_mcp/models/: navigation.py
hierarchical_docs_mcp/security/: path_validator.py  sanitizer.py
hierarchical_docs_mcp/services/: cache.py  hierarchy.py  markdown.py  search.py
hierarchical_docs_mcp/static/: app.js
hierarchical_docs_mcp/utils/: logger.py
pipelines/: README.md
pipelines/examples/: azure-pipelines-example.yml  github-actions-example.yml
pipelines/templates/: validate-docs.yml
scripts/: README.md  ascii2image.py  bump_version.py  generate-docs-pdf.sh  validate_docs.py
specs/001-claude-env-enhance/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-hierarchical-docs-mcp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-test-coverage/: coverage-analysis.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
tests/contract/: test_mcp_resources.py  test_mcp_tools.py
tests/integration/: test_auth_integration.py  test_branding.py  test_edge_cases_and_errors.py  test_generate_pdf_endpoint.py  test_markdown_navigation.py  test_mcp_protocol.py  test_spa_routing.py  test_sse_endpoint.py  test_streamable_http_endpoint.py  test_template_overrides.py  test_web_e2e.py  test_web_routes.py
tests/unit/: test_auth.py  test_branding_config.py  test_cache.py  test_config.py  test_document.py  test_handlers_resources.py  test_handlers_tools.py  test_hierarchy.py  test_main.py  test_markdown.py  test_markdown_renderer.py  test_mcp_server_lifecycle.py  test_navigation.py  test_openapi.py  test_path_validator.py  test_sanitizer.py  test_search.py  test_server.py  test_vector.py  test_web.py
(+34 files in other folders)
