[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-docs-mcp"
version = "0.1.0"
description = "Model Context Protocol server for hierarchical documentation navigation with markdown and OpenAPI support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "MCP Contributors"}
]
keywords = ["mcp", "documentation", "ai", "openapi", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core + MCP — base install works as MCP server out of the box
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=0.1.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "markdown>=3.5",
    "pygments>=2.17",
]
server = [
    # web deps (flattened to avoid self-referential extras in editable installs)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "markdown>=3.5",
    "pygments>=2.17",
    # server-specific deps
    "openapi-spec-validator>=0.7.0",
    "prance>=23.6.21.0",
    "watchdog>=3.0.0",
]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
]
vector-gpu = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
]
pdf = [
    "Pillow>=9.0.0",
]
full = [
    # server deps (flattened)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "markdown>=3.5",
    "pygments>=2.17",
    "openapi-spec-validator>=0.7.0",
    "prance>=23.6.21.0",
    "watchdog>=3.0.0",
    # vector deps
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    # pdf deps
    "Pillow>=9.0.0",
]
dev = [
    # full deps (flattened)
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
    "markdown>=3.5",
    "pygments>=2.17",
    "openapi-spec-validator>=0.7.0",
    "prance>=23.6.21.0",
    "watchdog>=3.0.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.2",
    "Pillow>=9.0.0",
    # dev tools
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-mock>=3.11.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML",
    "python-dotenv>=1.0.0",
]

[project.scripts]
your-docs-mcp = "docs_mcp.__main__:mcp_main"
your-docs-web = "docs_mcp.__main__:web_main"
your-docs-server = "docs_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/esola-thomas/your-docs-mcp"
Repository = "https://github.com/esola-thomas/your-docs-mcp"
Documentation = "https://github.com/esola-thomas/your-docs-mcp/tree/main/docs"
"Issue Tracker" = "https://github.com/esola-thomas/your-docs-mcp/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["docs_mcp*"]

[tool.setuptools.package-data]
docs_mcp = [
    "py.typed",
    "web/static/**/*",
    "web/templates/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line too long (handled by formatter)

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pydantic", "pydantic_settings", "mcp.*", "yaml", "markdown", "markdown.*", "pygments", "pygments.*"]
ignore_missing_imports = true
